--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,8 @@ project(52g CXX)
 
 cmake_minimum_required(VERSION 3.2)
 
+# Export all executable targets to ${CMAKE_BINARY_DIR}
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 add_subdirectory(src)
-add_subdirectory(core)
-
-add_executable(mkbfidx mkbfidx.cc)
-target_link_libraries(mkbfidx core)
-
 add_subdirectory(test)
