--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,8 @@ target_compile_options(libbf PUBLIC -std=c++11)
 target_include_directories(libbf PUBLIC libbf/src)
 
 add_subdirectory(docopt)
+
+add_subdirectory(core)
+
+add_executable(mkbfidx mkbfidx.cc)
+target_link_libraries(mkbfidx core)
