add findidx executable

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,5 +6,11 @@ add_subdirectory(docopt)
 
 add_subdirectory(core)
 
+# Export executable targets to ${CMAKE_BINARY_DIR}
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 add_executable(mkbfidx mkbfidx.cc)
-target_link_libraries(mkbfidx core)
+target_link_libraries(mkbfidx core docopt)
+
+add_executable(findidx findidx.cc)
+target_link_libraries(findidx core docopt)
