--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ target_compile_options(libbf PUBLIC -std=c++11)
 target_include_directories(libbf PUBLIC libbf/src)
 
 add_subdirectory(docopt)
+add_subdirectory(json11)
 
 add_subdirectory(core)
 
