--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "dev": "nodemon ./index.js test/foo.idx",
     "install": "npm run compile",
     "compile": "mkdir build; cd build && cmake .. && make mkbfidx openidx",
     "clean": "rm -rf build",
