--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "morgan": "^1.7.0",
     "serve-static": "^1.10.2",
     "yargs": "^4.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.1"
   }
 }
